2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Filesystems.csproj: Bump to version 3.2.0

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs: Remove spurious debug leftover.
	"Entries are always an integral number of words" solved.

	* Super.cs: When filling volume block map, check we are not
	going out of bounds.

	* HPFS.cs:
	* SysV.cs: Do not try to read past device.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs:
	* Info.cs:
	* Super.cs:
	* Xattr.cs:
	* Consts.cs:
	* Structs.cs:
	* AppleMFS.cs: Implemented missing methods, for full MFS
	read-only support.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* File.cs: Correct block size arithmetic.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Consts.cs:
	* Structs.cs: Added missing consts and structures.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Info.cs:
	* Encoding.cs: Added MacRoman to Unicode.

	* Encoding.cs: Corrected Unicode mapping.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* Super.cs:
	* Xattr.cs:
	* Consts.cs:
	* Structs.cs:
	* AppleMFS.cs:
	* Encoding.cs: Corrected file headers.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* Info.cs:
	* File.cs:
	* Xattr.cs:
	* Super.cs:
	* Consts.cs:
	* Structs.cs:
	* Encoding.cs:
	* AppleMFS.cs:
	* DiscImageChef.Filesystems.csproj: Separated Apple MFS plugin
	in different files.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* SysV.cs: Detect older version of the XENIX superblock (found
	in Lisa XENIX).

2016-07-31  Natalia Portillo  <claunia@claunia.com>

	* File.cs:
	* Super.cs: Corrected file size calculation.

2016-07-31  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs:
	* Info.cs:
	* Super.cs:
	* Consts.cs:
	* Structs.cs:
	* UCSDPascal.cs:
	* DiscImageChef.Filesystems.csproj: Added support for U.C.S.D.
	Pascal filesystem, closes #31
